--- a/Emprendimientos.html
+++ b/Emprendimientos.html
@@ -23,28 +23,58 @@
 
 
     <div class="filter">
-        <input type="checkbox" id="check">
 
-        <label for="check" class="checkbtnicon">
+        <div class="mini-nav">
 
-            <i class='bx  bx-menu-filter'></i>
+            <input type="checkbox" id="check" />
 
-        </label>
+            <label for="check" class="checkbtnicon">
 
-        <label for="check" class="checkbtntext">
+                <i class='bx  bx-menu-filter'></i>
 
-            <h3 class="filter_text">Filtrar</h3>
+            </label>
 
-        </label>
+            <label for="check" class="checkbtntext">
 
-        <i class='bx  bx-phone'></i>
+                <h3 class="filter_text">Filtrar</h3>
 
-        <div class="contact_number">123456789</div>
+            </label>
+
+        </div>
+        <div class="contact_number">
+
+            <i class='bx  bx-phone'></i>
+
+            <h4 class="number">123456789</h4>
+
+        </div>
+
 
     </div>
 
-    <div class="bussines_content">
-        <div class="bussines_card"></div>
+
+
+    <div class="business_content">
+        <div class="business_card">
+
+            <div class="column">
+                <h2 class="business_tittle">Nombre de Negocio</h2>
+
+                <p class="business_description">Lorem ipsum dolor sit amet consectetur adipiscing elit pulvinar, class
+                    fringilla nunc habitasse aptent accumsan velit, magnis viverra sociosqu duis phasellus nascetur
+                    natoque.
+                    Hendrerit habitasse etiam est fringilla pellentesque erat pulvinar, tortor porta felis tellus lacus
+                    volutpat egestas eros, eget risus urna nascetur blandit hac. Faucibus sem posuere placerat integer
+                    tempus elementum pellentesque odio, tincidunt vel</p>
+
+                <button class="visualize">Visualizar</button>
+
+            </div>
+
+
+            <img src="golden-retriever.jpg" alt="imagen de un perro" class="business_img">
+
+        </div>
     </div>
 
 </body>
