--- a/Emprendimientos.html
+++ b/Emprendimientos.html
@@ -8,6 +8,19 @@
     <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
     <title>Emprendimientos</title>
 
+    <!--<div class="head_content">
+
+        <img src="imagenes login/W4U LOGO.jpeg" alt="Logo W4U" class="logo" />
+        <div class="community_name">Nombre comunidad</div>
+
+        <input type="text" placeholder="Buscar" class="search_input">
+
+    </div>-->
+
+</head>
+
+<body>
+
     <div class="head_content">
 
         <img src="imagenes login/W4U LOGO.jpeg" alt="Logo W4U" class="logo" />
@@ -16,12 +29,7 @@
         <input type="text" placeholder="Buscar" class="search_input">
 
     </div>
-
-</head>
-
-<body>
-
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1400 169">
         <path fill="#1398E8" fill-opacity="1"
             d="M0,160L80,133.3C160,107,320,53,480,64C640,75,800,149,960,160C1120,171,1280,117,1360,90.7L1440,64L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z">
         </path>
@@ -63,7 +71,7 @@
         <div class="business_card">
 
             <div class="column">
-                <h2 class="business_tittle">Nombre de Negocio</h2>
+                <h2 class="business_title">Nombre de Negocio</h2>
 
                 <p class="business_description">Lorem ipsum dolor sit amet consectetur adipiscing elit pulvinar, class
                     fringilla nunc habitasse aptent accumsan velit, magnis viverra sociosqu duis phasellus nascetur
@@ -91,7 +99,7 @@
             </div>
 
             <div class="products">
-                <h3 class="products_tittle">Productos</h3>
+                <h3 class="products_title">Productos</h3>
                 <img src="golden-retriever.jpg" alt="" class="product_img">
 
             </div>
