--- a/Emprendimientos.html
+++ b/Emprendimientos.html
@@ -77,35 +77,98 @@
             <div class="products">
                 <h3 class="products_title">Productos</h3>
                 <img src="golden-retriever.jpg" alt="" class="product_img">
+                <button class="view-products">Ver productos</button>
+
             </div>
         </div>
+
+        <div class="business_card">
+            <div class="column">
+                <h2 class="business_title">Nombre de Negocio</h2>
+                <p class="business_description">Lorem ipsum dolor sit amet consectetur adipiscing elit pulvinar, class
+                    fringilla nunc habitasse aptent accumsan velit, magnis viverra sociosqu duis phasellus nascetur
+                    natoque.
+                    Hendrerit habitasse etiam est fringilla pellentesque erat pulvinar, tortor porta felis tellus lacus
+                    volutpat egestas eros, eget risus urna nascetur blandit hac. Faucibus sem posuere placerat integer
+                    tempus elementum pellentesque odio, tincidunt vel</p>
+                <button class="visualize">Visualizar</button>
+            </div>
+            <div class="carrusel">
+                <div class="imagenes">
+                    <img src="perro5.jpg" alt="">
+                    <img src="golden-retriever.jpg" alt="">
+                    <img src="perro4.jpg" alt="">
+                </div>
+                <button class="anterior"><i class='bx  bx-arrow-left-stroke'></i></button>
+                <button class="siguiente"><i class='bx  bx-arrow-right'></i></button>
+            </div>
+            <div class="products">
+                <h3 class="products_title">Productos</h3>
+                <img src="golden-retriever.jpg" alt="" class="product_img">
+                <button class="view-products">Ver productos</button>
+
+            </div>
+        </div>
+
+        <div class="business_card">
+            <div class="column">
+                <h2 class="business_title">Nombre de Negocio</h2>
+                <p class="business_description">Lorem ipsum dolor sit amet consectetur adipiscing elit pulvinar, class
+                    fringilla nunc habitasse aptent accumsan velit, magnis viverra sociosqu duis phasellus nascetur
+                    natoque.
+                    Hendrerit habitasse etiam est fringilla pellentesque erat pulvinar, tortor porta felis tellus lacus
+                    volutpat egestas eros, eget risus urna nascetur blandit hac. Faucibus sem posuere placerat integer
+                    tempus elementum pellentesque odio, tincidunt vel</p>
+                <button class="visualize">Visualizar</button>
+            </div>
+            <div class="carrusel">
+                <div class="imagenes">
+                    <img src="perro5.jpg" alt="">
+                    <img src="golden-retriever.jpg" alt="">
+                    <img src="perro4.jpg" alt="">
+                </div>
+                <button class="anterior"><i class='bx  bx-arrow-left-stroke'></i></button>
+                <button class="siguiente"><i class='bx  bx-arrow-right'></i></button>
+            </div>
+            <div class="products">
+                <h3 class="products_title">Productos</h3>
+                <img src="golden-retriever.jpg" alt="" class="product_img">
+                <button class="view-products">Ver productos</button>
+
+            </div>
+        </div>
+
+
     </div>
     <script>
-        const imagenes = document.querySelector('.imagenes');
-        const total = document.querySelectorAll('.imagenes img').length;
-        const anterior = document.querySelector('.anterior');
-        const siguiente = document.querySelector('.siguiente');
-        let indice = 0;
-
-        function actualizarCarrusel() {
-            imagenes.style.transform = `translateX(-${indice * 400}px)`;
-        }
-
-        siguiente.addEventListener('click', () => {
-            indice = (indice + 1) % total;
-            actualizarCarrusel();
+        // Obtener todos los carruseles en la página
+        const carruseles = document.querySelectorAll('.carrusel');
+        carruseles.forEach((carrusel) => {
+            const imagenes = carrusel.querySelector('.imagenes');
+            const total = carrusel.querySelectorAll('.imagenes img').length;
+            const anterior = carrusel.querySelector('.anterior');
+            const siguiente = carrusel.querySelector('.siguiente');
+            let indice = 0;
+            // Función para actualizar el carrusel
+            function actualizarCarrusel() {
+                imagenes.style.transform = `translateX(-${indice * 400}px)`;
+            }
+            // Botón siguiente
+            siguiente.addEventListener('click', () => {
+                indice = (indice + 1) % total;
+                actualizarCarrusel();
+            });
+            // Botón anterior
+            anterior.addEventListener('click', () => {
+                indice = (indice - 1 + total) % total;
+                actualizarCarrusel();
+            });
+            // Opcional: avance automático cada 5 segundos
+            /*setInterval(() => {
+                indice = (indice + 1) % total;
+                actualizarCarrusel();
+            }, 5000);*/
         });
-
-        anterior.addEventListener('click', () => {
-            indice = (indice - 1 + total) % total;
-            actualizarCarrusel();
-        });
-
-        // Opcional: avance automático cada 5 segundos
-        /*setInterval(() => {
-            indice = (indice + 1) % total;
-            actualizarCarrusel();
-        }, 5000);*/
     </script>
 
 </body>
