--- a/admin.html
+++ b/admin.html
@@ -6,8 +6,8 @@
   <title>Panel de Administración</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="admin.css" />
-  <script defer src="admin.js"></script>
+  <link rel="stylesheet" href="css/admin.css" />
+  <script defer src="js/admin.js"></script>
 </head>
 <body>
 
