--- a/Emprendimientos.html
+++ b/Emprendimientos.html
@@ -78,8 +78,10 @@
                 <h3 class="products_title">Productos</h3>
                 <img src="golden-retriever.jpg" alt="" class="product_img">
                 <button class="view-products">Ver productos</button>
-
             </div>
+            <!--<div class="business-contact">
+                <h3>Contacto</h3>
+            </div>-->
         </div>
 
         <div class="business_card">
@@ -106,8 +108,10 @@
                 <h3 class="products_title">Productos</h3>
                 <img src="golden-retriever.jpg" alt="" class="product_img">
                 <button class="view-products">Ver productos</button>
-
             </div>
+            <!--<div class="business-contact">
+                <h3>Contacto</h3>
+            </div>-->
         </div>
 
         <div class="business_card">
@@ -134,8 +138,10 @@
                 <h3 class="products_title">Productos</h3>
                 <img src="golden-retriever.jpg" alt="" class="product_img">
                 <button class="view-products">Ver productos</button>
-
             </div>
+            <!--<div class="business-contact">
+                <h3>Contacto</h3>
+            </div>-->
         </div>
 
 
