--- a/Emprendimientos.html
+++ b/Emprendimientos.html
@@ -45,9 +45,14 @@
                 <h3 class="filter_text">Filtrar</h3>
             </label>
         </div>
-        <div class="contact_number">
-            <i class='bx  bx-phone'></i>
-            <h4 class="number">123456789</h4>
+        <div class="sales">
+            <a class="link-to-offers" href="Ofertas.html">
+                <button class="view-sales">
+                    <h3 class="number">Ofertas
+                    </h3>
+                </button>
+            </a>
+
         </div>
     </div>
 
@@ -144,8 +149,14 @@
             </div>-->
         </div>
 
+        <footer class="footer">
+            <h1>Footer placeholder</h1>
+        </footer>
 
     </div>
+
+
+
     <script>
         // Obtener todos los carruseles en la página
         const carruseles = document.querySelectorAll('.carrusel');
@@ -176,6 +187,8 @@
             }, 5000);*/
         });
     </script>
+
+
 
 </body>
 
