Ema sube pagina de inicio, login, registro, mapa interactivo y transporte
Se subio el borrador de las paginas con validaciones de campos. Queda por ajustar. 1. Annadir a trasnporte horarios mas especificos y links reales de la web. 2. Extender un poco la pagina de inicio con tarjetas que resuman los valores.

--- a/Login/login.html
+++ b/Login/login.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="login.css" />
 </head>
 <body>
-
+  
   <div class="login-container">
-    <img src="imagenes login/W4U LOGO.jpeg" alt="Logo W4U" class="logo" />
+    <img src="imagenes login/W4U LOGO CELESTE PNG.png" alt="Logo W4U" class="logo" />
 
     <h1>Iniciar sesión a Comunidad Unida</h1>
 
@@ -20,12 +20,15 @@
       <button type="submit">Continuar</button>
     </form>
 
-    <p class="registro-link">¿No tienes cuenta? <a href="#">Crea una</a></p>
+    <p class="registro-link">¿No tienes cuenta? <a href="../Registro/Registro.html">Crea una</a></p>
   </div>
 
-  <footer>
-    Hecho por W4U
+ <!-- Footer -->
+  <footer class="footer-principal">
+    <p class="texto-footer">Comunidad Unida | Tel: +506 8888-8888</p>
   </footer>
+
+  <script src="login.js"></script>
 
 </body>
 </html>
