--- a/Anuncios/anuncios.html
+++ b/Anuncios/anuncios.html
@@ -15,8 +15,8 @@
                     <p class="montserrat-regular seccion1">¿Deseas compartir una petición?</p>
                     <br>
                     <button onclick="abrirFormulario()" class="escribir montserrat-bold" id="escribir">Haz clic</button>
-                            </div>
-            <div class="buscador"></div>
+            </div>
+            <div class="buscador"><i class="fa-solid fa-magnifying-glass fa-lg" id="icono_buscar"></i><input type="text" id="busca" class="montserrat-regular" placeholder="Describe lo que quieres encontrar..."></div>
         </div>
         <div class="anuncios_totales">
             <div class="anuncio">
