--- a/Anuncios/anuncios.html
+++ b/Anuncios/anuncios.html
@@ -29,7 +29,7 @@
                 <div class="fecha"><p  class="montserrat-regular">01/01/2025</p></div>
             </div>
             
-            <div class="anuncio" onclick="peticionAbierta()">
+            <div class="anuncio">
                 <div class="categoria">
                     <p class="montserrat-regular">General</p>
                 </div>
@@ -71,7 +71,7 @@
                 <div class="fecha_lugar_desplegada">
                         <button class="lugar"><i class="fa-solid fa-location-dot fa-2x"></i><p class="montserrat-semibold lugar1">Lugar</p></button>
                         <button class="lugar"><i class="fa-solid fa-face-smile fa-2x"></i><p class="montserrat-semibold autor">Estado</p></button>
-                        <button class="lugar"><i class="fa-solid fa-calendar fa-2x"></i><p class="montserrat-semibold fecha">Fecha</p></button>
+                        <button class="lugar"><i class="fa-solid fa-calendar fa-2x"></i><p class="montserrat-semibold fecha1">Fecha</p></button>
                 </div>
             </div>
         </div>
