--- a/Emprendimientos.html
+++ b/Emprendimientos.html
@@ -61,18 +61,18 @@
     <div class="business_content">
         <div class="business_card">
             <div class="column">
-                <h2 class="business_title">Nombre de Negocio</h2>
+                <h2 class="business_title">Leche</h2>
                 <p class="business_description">Lorem ipsum dolor sit amet consectetur adipiscing elit pulvinar, class
                     fringilla nunc habitasse aptent accumsan velit, magnis viverra sociosqu duis phasellus nascetur
                     natoque.
                     Hendrerit habitasse etiam est fringilla pellentesque erat pulvinar, tortor porta felis tellus lacus
                     volutpat egestas eros, eget risus urna nascetur blandit hac. Faucibus sem posuere placerat integer
                     tempus elementum pellentesque odio, tincidunt vel</p>
-                <button class="visualize">Visualizar</button>
+                <button class="visualize" data-id="1">Visualizar</button>
             </div>
             <div class="carrusel">
                 <div class="imagenes">
-                    <img src="perro5.jpg" alt="">
+                    <img src="perro5.jpg" alt="" class="imagen">
                     <img src="golden-retriever.jpg" alt="">
                     <img src="perro4.jpg" alt="">
                 </div>
@@ -91,18 +91,18 @@
 
         <div class="business_card">
             <div class="column">
-                <h2 class="business_title">Nombre de Negocio</h2>
+                <h2 class="business_title">Arroz</h2>
                 <p class="business_description">Lorem ipsum dolor sit amet consectetur adipiscing elit pulvinar, class
                     fringilla nunc habitasse aptent accumsan velit, magnis viverra sociosqu duis phasellus nascetur
                     natoque.
                     Hendrerit habitasse etiam est fringilla pellentesque erat pulvinar, tortor porta felis tellus lacus
                     volutpat egestas eros, eget risus urna nascetur blandit hac. Faucibus sem posuere placerat integer
                     tempus elementum pellentesque odio, tincidunt vel</p>
-                <button class="visualize">Visualizar</button>
+                <button class="visualize" data-id="2">Visualizar</button>
             </div>
             <div class="carrusel">
                 <div class="imagenes">
-                    <img src="perro5.jpg" alt="">
+                    <img src="perro5.jpg" alt="" class="imagen">
                     <img src="golden-retriever.jpg" alt="">
                     <img src="perro4.jpg" alt="">
                 </div>
@@ -121,18 +121,18 @@
 
         <div class="business_card">
             <div class="column">
-                <h2 class="business_title">Nombre de Negocio</h2>
+                <h2 class="business_title">Cafe</h2>
                 <p class="business_description">Lorem ipsum dolor sit amet consectetur adipiscing elit pulvinar, class
                     fringilla nunc habitasse aptent accumsan velit, magnis viverra sociosqu duis phasellus nascetur
                     natoque.
                     Hendrerit habitasse etiam est fringilla pellentesque erat pulvinar, tortor porta felis tellus lacus
                     volutpat egestas eros, eget risus urna nascetur blandit hac. Faucibus sem posuere placerat integer
                     tempus elementum pellentesque odio, tincidunt vel</p>
-                <button class="visualize">Visualizar</button>
+                <button class="visualize" data-id="3">Visualizar</button>
             </div>
             <div class="carrusel">
                 <div class="imagenes">
-                    <img src="perro5.jpg" alt="">
+                    <img src="perro5.jpg" alt="" class="imagen">
                     <img src="golden-retriever.jpg" alt="">
                     <img src="perro4.jpg" alt="">
                 </div>
@@ -186,6 +186,23 @@
                 actualizarCarrusel();
             }, 5000);*/
         });
+
+
+        document.querySelectorAll('.visualize').forEach(button => {
+            button.addEventListener('click', function () {
+                const emprendimiento = this.closest('.business_card');
+
+                // Obtiene el contenido de los elementos con clases genéricas
+                const titulo = emprendimiento.querySelector('.business_title').textContent;
+                const descripcion = emprendimiento.querySelector('.business_description').textContent;
+                const imagenSrc = emprendimiento.querySelector('.imagen').src;
+                const imagenAlt = emprendimiento.querySelector('.imagen').alt;
+
+                // Redirige a la página genérica con los datos en la URL
+                window.location.href = `VistaEmprendimientos.html?titulo=${titulo}&descripcion=${descripcion}&imagenSrc=${imagenSrc}&imagenAlt=${imagenAlt}`;
+            });
+        });
+
     </script>
 
 
