--- a/Ofertas.html
+++ b/Ofertas.html
@@ -52,50 +52,60 @@
     <div class="sales_content">
         <div class="sales_card">
             <div class="item">
-                <h3 class="offer-tittle">Titulo oferta</h3>
-                <img src="perro2.jpg" alt="" class="offer-image">
-                <p class="offer-description">Pequeña descripcion de
-                    oferta
+                <h3 class="offer-tittle">20% en Verduras Frescas
+                </h3>
+                <img src="verduras.jpg" alt="" class="offer-image">
+                <p class="offer-description">Compra en la Feria El Ciprés y obtené 20% de descuento los sábados.
+
                 </p>
                 <button class="view-offer">Ver Oferta</button>
             </div>
             <div class="item">
-                <h3 class="offer-tittle">Titulo oferta</h3>
-                <img src="perro2.jpg" alt="" class="offer-image">
-                <p class="offer-description">Pequeña descripcion de
-                    oferta
+                <h3 class="offer-tittle">Clases de Zumba Gratis
+                </h3>
+                <img src="zumba.jpg" alt="" class="offer-image">
+                <p class="offer-description">El Salón Comunal La Esperanza ofrece clases gratuitas todos los miércoles a
+                    las 6:00 p.m.
+
                 </p>
                 <button class="view-offer">Ver Oferta</button>
             </div>
             <div class="item">
-                <h3 class="offer-tittle">Titulo oferta</h3>
-                <img src="perro2.jpg" alt="" class="offer-image">
-                <p class="offer-description">Pequeña descripcion de
-                    oferta
+                <h3 class="offer-tittle">2x1 en Pan Casero
+                </h3>
+                <img src="pan.jpg" alt="" class="offer-image">
+                <p class="offer-description">Panadería "El Trigal", en San Isidro Centro, ofrece 2x1 en bollos
+                    integrales cada viernes.
+
                 </p>
                 <button class="view-offer">Ver Oferta</button>
             </div>
             <div class="item">
-                <h3 class="offer-tittle">Titulo oferta</h3>
-                <img src="perro2.jpg" alt="" class="offer-image">
-                <p class="offer-description">Pequeña descripcion de
-                    oferta
+                <h3 class="offer-tittle">Revisión Dental sin Costo
+                </h3>
+                <img src="dentista.jpg" alt="" class="offer-image">
+                <p class="offer-description">Clínica Dental Sonríe brinda revisiones gratuitas a adultos mayores este
+                    mes en Santa Lucía.
+
                 </p>
                 <button class="view-offer">Ver Oferta</button>
             </div>
             <div class="item">
-                <h3 class="offer-tittle">Titulo oferta</h3>
-                <img src="perro2.jpg" alt="" class="offer-image">
-                <p class="offer-description">Pequeña descripcion de
-                    oferta
+                <h3 class="offer-tittle">Corte de Cabello a ₡2,500
+                </h3>
+                <img src="barbero.jpg" alt="" class="offer-image">
+                <p class="offer-description">Barbería Don Luis en San Ramón ofrece cortes económicos para estudiantes de
+                    lunes a jueves.
+
                 </p>
                 <button class="view-offer">Ver Oferta</button>
             </div>
             <div class="item">
-                <h3 class="offer-tittle">Titulo oferta</h3>
-                <img src="perro2.jpg" alt="" class="offer-image">
-                <p class="offer-description">Pequeña descripcion de
-                    oferta
+                <h3 class="offer-tittle">Internet Comunitario Gratis
+                </h3>
+                <img src="wifi.jpg" alt="" class="offer-image">
+                <p class="offer-description">Punto de acceso libre en el parque de Barrio El Molino todos los días de
+                    7:00 a.m. a 9:00 p.m.
                 </p>
                 <button class="view-offer">Ver Oferta</button>
             </div>
