--- a/Emprendimientos.html
+++ b/Emprendimientos.html
@@ -61,20 +61,19 @@
     <div class="business_content">
         <div class="business_card">
             <div class="column">
-                <h2 class="business_title">Leche</h2>
-                <p class="business_description">Lorem ipsum dolor sit amet consectetur adipiscing elit pulvinar, class
-                    fringilla nunc habitasse aptent accumsan velit, magnis viverra sociosqu duis phasellus nascetur
-                    natoque.
-                    Hendrerit habitasse etiam est fringilla pellentesque erat pulvinar, tortor porta felis tellus lacus
-                    volutpat egestas eros, eget risus urna nascetur blandit hac. Faucibus sem posuere placerat integer
-                    tempus elementum pellentesque odio, tincidunt vel</p>
+                <h2 class="business_title">Dulce Raíz</h2>
+                <p class="business_description">Dulce Raíz es un emprendimiento casero que rescata los sabores de la
+                    cocina tradicional y los transforma en postres artesanales con un toque moderno. Nacido en una
+                    cocina familiar y con recetas que han pasado de generación en generación, este proyecto ofrece
+                    productos como tamales dulces, cajetas, atolitos, cocadas y confituras elaboradas con ingredientes
+                    frescos y naturales.</p>
                 <button class="visualize" data-id="1">Visualizar</button>
             </div>
             <div class="carrusel">
                 <div class="imagenes">
-                    <img src="perro5.jpg" alt="" class="imagen">
-                    <img src="golden-retriever.jpg" alt="">
-                    <img src="perro4.jpg" alt="">
+                    <img src="OIP.jpeg" alt="" class="imagen">
+                    <img src="OIP (1).jpeg" alt="">
+                    <img src="OIP (3).jpg" alt="">
                 </div>
                 <button class="anterior"><i class='bx  bx-arrow-left-stroke'></i></button>
                 <button class="siguiente"><i class='bx  bx-arrow-right'></i></button>
@@ -91,13 +90,11 @@
 
         <div class="business_card">
             <div class="column">
-                <h2 class="business_title">Arroz</h2>
-                <p class="business_description">Lorem ipsum dolor sit amet consectetur adipiscing elit pulvinar, class
-                    fringilla nunc habitasse aptent accumsan velit, magnis viverra sociosqu duis phasellus nascetur
-                    natoque.
-                    Hendrerit habitasse etiam est fringilla pellentesque erat pulvinar, tortor porta felis tellus lacus
-                    volutpat egestas eros, eget risus urna nascetur blandit hac. Faucibus sem posuere placerat integer
-                    tempus elementum pellentesque odio, tincidunt vel</p>
+                <h2 class="business_title">Manos de Barro</h2>
+                <p class="business_description">Manos de Barro es un taller artesanal de cerámica que nace en casa,
+                    donde el barro cobra vida entre dedos creativos. Aquí, cada taza, plato, maceta o figura decorativa
+                    es moldeada con esmero y cocida con dedicación, resultando en piezas únicas y llenas de carácter.
+                </p>
                 <button class="visualize" data-id="2">Visualizar</button>
             </div>
             <div class="carrusel">
@@ -121,13 +118,11 @@
 
         <div class="business_card">
             <div class="column">
-                <h2 class="business_title">Cafe</h2>
-                <p class="business_description">Lorem ipsum dolor sit amet consectetur adipiscing elit pulvinar, class
-                    fringilla nunc habitasse aptent accumsan velit, magnis viverra sociosqu duis phasellus nascetur
-                    natoque.
-                    Hendrerit habitasse etiam est fringilla pellentesque erat pulvinar, tortor porta felis tellus lacus
-                    volutpat egestas eros, eget risus urna nascetur blandit hac. Faucibus sem posuere placerat integer
-                    tempus elementum pellentesque odio, tincidunt vel</p>
+                <h2 class="business_title">Aroma de Hogar</h2>
+                <p class="business_description">Aroma de Hogar es un pequeño emprendimiento casero dedicado a la
+                    creación de velas aromáticas, difusores y ambientadores naturales. Utilizando cera de soya, aceites
+                    esenciales y esencias cuidadosamente seleccionadas, cada producto está pensado para transformar
+                    cualquier espacio en un rincón acogedor. </p>
                 <button class="visualize" data-id="3">Visualizar</button>
             </div>
             <div class="carrusel">
@@ -168,7 +163,7 @@
             let indice = 0;
             // Función para actualizar el carrusel
             function actualizarCarrusel() {
-                imagenes.style.transform = `translateX(-${indice * 400}px)`;
+                imagenes.style.transform = `translateX(-${indice * 300}px)`;
             }
             // Botón siguiente
             siguiente.addEventListener('click', () => {
