--- a/Login/login.html
+++ b/Login/login.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  
+
   <div class="login-container">
     <img src="imagenes login/W4U LOGO CELESTE PNG.png" alt="Logo W4U" class="logo" />
 
@@ -17,7 +17,10 @@
 
     <form class="login-form">
       <label for="usuario">Teléfono o usuario</label>
-      <input type="text" id="usuario" name="usuario" placeholder="Ej. 8888-8888 o usuario123" required />
+      <input type="text" id="usuario" name="usuario" placeholder="Ej. 88888888 o usuario123" required />
+
+      <label for="contrasena">Contraseña</label>
+      <input type="password" id="contrasena" name="contrasena" placeholder="Ingresa tu contraseña" required />
 
       <button type="submit">Continuar</button>
     </form>
@@ -25,7 +28,7 @@
     <p class="registro-link">¿No tienes cuenta? <a href="../Registro/Registro.html">Crea una</a></p>
   </div>
 
- <!-- Footer -->
+  <!-- Footer -->
   <footer class="footer-principal">
     <p class="texto-footer">Comunidad Unida | Tel: +506 8888-8888</p>
   </footer>
