--- a/Inicio/inicio.html
+++ b/Inicio/inicio.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <title>Inicio - Comunidad Unida</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="inicio.css">
 </head>
+
 <body>
 
     <main>
@@ -19,19 +21,19 @@
                     <span class="galeria-texto">Iniciar Sesión</span>
                 </div>
             </a>
-            <a href="../Anuncios/Anuncios.html" class="galeria-item-link">
+            <a href="../Anuncios/anuncios.html" class="galeria-item-link">
                 <div class="galeria-item">
                     <img src="Imagenes inicio/Anuncios.png" alt="Anuncios">
                     <span class="galeria-texto">Anuncios</span>
                 </div>
             </a>
-            <a href="../Calendario/Calendario.html" class="galeria-item-link">
+            <a href="../Eventos/eventos.html" class="galeria-item-link">
                 <div class="galeria-item">
                     <img src="Imagenes inicio/Calendario.png" alt="Calendario">
                     <span class="galeria-texto">Calendario</span>
                 </div>
             </a>
-            <a href="../Descuentos/Descuentos.html" class="galeria-item-link">
+            <a href="../Emprendimientos/Ofertas.html" class="galeria-item-link">
                 <div class="galeria-item">
                     <img src="Imagenes inicio/Descuentos.png" alt="Descuentos">
                     <span class="galeria-texto">Ofertas</span>
@@ -43,25 +45,25 @@
                     <span class="galeria-texto">Emprendimientos</span>
                 </div>
             </a>
-            <a href="../Eventos/Eventos.html" class="galeria-item-link">
+            <a href="../Eventos/eventos.html" class="galeria-item-link">
                 <div class="galeria-item">
                     <img src="Imagenes inicio/Eventos.png" alt="Eventos">
                     <span class="galeria-texto">Eventos</span>
                 </div>
             </a>
-            <a href="../Mapa/Mapa.html" class="galeria-item-link">
+            <a href="../Mapa/mapa.html" class="galeria-item-link">
                 <div class="galeria-item">
                     <img src="Imagenes inicio/Mapa.png" alt="Mapa">
                     <span class="galeria-texto">Mapa</span>
                 </div>
             </a>
-            <a href="../Reportes/Reportes.html" class="galeria-item-link">
+            <a href="../Reportes/reportes.html" class="galeria-item-link">
                 <div class="galeria-item">
                     <img src="Imagenes inicio/Reportes.png" alt="Reportes">
                     <span class="galeria-texto">Reportes</span>
                 </div>
             </a>
-            <a href="../Transporte/Transporte.html" class="galeria-item-link">
+            <a href="../Transporte/transporte.html" class="galeria-item-link">
                 <div class="galia-item">
                     <img src="Imagenes inicio/Transporte.png" alt="Transporte">
                     <span class="galeria-texto">Transporte</span>
@@ -106,4 +108,5 @@
     </footer>
 
 </body>
+
 </html>
