--- a/Emprendimientos/Emprendimientos.html
+++ b/Emprendimientos/Emprendimientos.html
@@ -144,8 +144,8 @@
             </div>-->
         </div>
 
-        <footer class="footer">
-            <h1>Footer placeholder</h1>
+        <footer class="footer-principal">
+            <p class="texto-footer">Comunidad Unida | Tel: +506 8888-8888</p>
         </footer>
 
     </div>
