Footer en todas las paginas y redireccionar logo a Landing page de W4U

--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -465,5 +465,20 @@
     <div id="overlay"></div>
     </main>
   </div>
+<footer class="footer-principal">
+  <div class="footer-contenido">
+    <div class="footer-info">
+      <p><strong>Comunidad Unida</strong></p>
+      <p>Flores, Heredia</p>
+      <p>Tel: +506 8888-8888</p>
+    </div>
+    <div class="footer-creditos">
+      <p>Diseñado por <strong>W4U</strong></p>
+      <a href="../Landing/landing_page.html" target="_blank">
+        <img src="../img/logo-w4u.png" alt="Logo W4U" class="logo-creador" />
+      </a>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
