--- a/Landing/landing_page.html
+++ b/Landing/landing_page.html
@@ -24,7 +24,7 @@
             <div class="carta">
             <img class="equipo" src="img/jose b.png">
             <div class="contenedor">
-                <h4 class="poppins-medium"><b>Jose Barrantese</b></h4>
+                <h4 class="poppins-medium"><b>Jose Barrantes</b></h4>
                 <p class="poppins-light">Coordinador de soporte</p>
             </div>
             </div>
