--- a/Emprendimientos/Emprendimientos.html
+++ b/Emprendimientos/Emprendimientos.html
@@ -26,7 +26,12 @@
         <img src="imagenes login/W4U LOGO.jpeg" alt="Logo W4U" class="logo" />
         <div class="community_name">Nombre comunidad</div>
 
-        <input type="text" placeholder="Buscar" class="search_input">
+       <!--<input type="text" placeholder="Buscar" class="search_input"> 
+
+        <div class="search-container">
+            <input type="text" placeholder="Buscar" class="search_input">
+            <button class="search-button"><i class='bx bx-search'></i></button>
+        </div> -->
 
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1400 169">
@@ -145,7 +150,19 @@
         </div>
 
         <footer class="footer-principal">
-            <p class="texto-footer">Comunidad Unida | Tel: +506 8888-8888</p>
+        <div class="footer-contenido">
+            <div class="footer-info">
+            <p><strong>Comunidad Unida</strong></p>
+            <p>Flores, Heredia</p>
+            <p>Tel: +506 8888-8888</p>
+            </div>
+            <div class="footer-creditos">
+            <p>Diseñado por <strong>W4U</strong></p>
+            <a href="../Landing/landing_page.html" target="_blank">
+                <img src="../img/logo-w4u.png" alt="Logo W4U" class="logo-creador" />
+            </a>
+            </div>
+        </div>
         </footer>
 
     </div>
