--- a/Emprendimientos/VistaEmprendimientos.html
+++ b/Emprendimientos/VistaEmprendimientos.html
@@ -61,9 +61,21 @@
     <img id="imagen" src="" alt="">
     <p id="descripcion"></p>
 
-    <footer class="footer">
-        <h1>Footer placeholder</h1>
-    </footer>
+        <footer class="footer-principal">
+        <div class="footer-contenido">
+            <div class="footer-info">
+            <p><strong>Comunidad Unida</strong></p>
+            <p>Flores, Heredia</p>
+            <p>Tel: +506 8888-8888</p>
+            </div>
+            <div class="footer-creditos">
+            <p>Diseñado por <strong>W4U</strong></p>
+            <a href="../Landing/landing_page.html" target="_blank">
+                <img src="../img/logo-w4u.png" alt="Logo W4U" class="logo-creador" />
+            </a>
+            </div>
+        </div>
+        </footer>
 
     </div>
 
