--- a/Login/login.html
+++ b/Login/login.html
@@ -29,9 +29,21 @@
   </div>
 
   <!-- Footer -->
-  <footer class="footer-principal">
-    <p class="texto-footer">Comunidad Unida | Tel: +506 8888-8888</p>
-  </footer>
+<footer class="footer-principal">
+  <div class="footer-contenido">
+    <div class="footer-info">
+      <p><strong>Comunidad Unida</strong></p>
+      <p>Flores, Heredia</p>
+      <p>Tel: +506 8888-8888</p>
+    </div>
+    <div class="footer-creditos">
+      <p>Diseñado por <strong>W4U</strong></p>
+      <a href="../Landing/landing_page.html" target="_blank">
+        <img src="../img/logo-w4u.png" alt="Logo W4U" class="logo-creador" />
+      </a>
+    </div>
+  </div>
+</footer>
 
   <script src="login.js"></script>
 
