--- a/Transporte/transporte.html
+++ b/Transporte/transporte.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+  <div class="contenido-principal">
+
   <h1 class="titulo-pagina">Rutas de Transporte</h1>
 
   <!-- Selector de medio -->
@@ -45,6 +47,7 @@
     <a href="https://www.busejemplo.com" class="link-bus" target="_blank">www.busejemplo.com</a>
   </div>
 
+  </div>
   <!-- Footer -->
 <footer class="footer-principal">
   <div class="footer-contenido">
