Cambio en footer y contenido

--- a/Anuncios/anuncios.html
+++ b/Anuncios/anuncios.html
@@ -24,7 +24,7 @@
                     <p class="montserrat-regular" >General</p>
                 </div>
                 <h2 class="montserrat-semibold nombre">Corte de agua</h2>
-                <p class="montserrat-regular descripcion parrafo">Va a ver un corte de agua en la comunidad</p>
+                <p class="montserrat-regular descripcion parrafo">Se va a dar un corte de agua en la comunidad</p>
                 <button class="estado">Estado</button>
                 <div class="fecha"><p  class="montserrat-regular">01/01/2025</p></div>
             </div>
