--- a/Landing/landing_page.html
+++ b/Landing/landing_page.html
@@ -116,7 +116,7 @@
     </div>
     <div class="producto">
         <h2 class="poppins-medium">¿Quiéres conocer nuestros clientes?, haz clic para verlos</h2>
-        <button><p class="poppins-light flores">Comunidad Flores de Heredia</p></button>
+        <a href="../Login/login.html"><button><p class="poppins-light flores">Comunidad Flores de Heredia</p></button></a> 
     </div>
 </body>
 <script src="https://kit.fontawesome.com/2b7365d647.js" crossorigin="anonymous"></script>   
