--- a/Emprendimientos/Emprendimientos.html
+++ b/Emprendimientos/Emprendimientos.html
@@ -27,7 +27,7 @@
         <img src="imagenes login/W4U LOGO.jpeg" alt="Logo W4U" class="logo" />
         <div class="community_name">Nombre comunidad</div>
 
-       <!--<input type="text" placeholder="Buscar" class="search_input"> 
+        <!--<input type="text" placeholder="Buscar" class="search_input"> 
 
         <div class="search-container">
             <input type="text" placeholder="Buscar" class="search_input">
@@ -35,11 +35,11 @@
         </div> -->
 
     </div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1400 169">
+    <!--<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1400 169">
         <path fill="#1398E8" fill-opacity="1"
             d="M0,160L80,133.3C160,107,320,53,480,64C640,75,800,149,960,160C1120,171,1280,117,1360,90.7L1440,64L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z">
         </path>
-    </svg>
+    </svg>-->
 
     <div class="filter">
         <div class="mini-nav">
@@ -151,19 +151,19 @@
         </div>
 
         <footer class="footer-principal">
-        <div class="footer-contenido">
-            <div class="footer-info">
-            <p><strong>Comunidad Unida</strong></p>
-            <p>Flores, Heredia</p>
-            <p>Tel: +506 8888-8888</p>
+            <div class="footer-contenido">
+                <div class="footer-info">
+                    <p><strong>Comunidad Unida</strong></p>
+                    <p>Flores, Heredia</p>
+                    <p>Tel: +506 8888-8888</p>
+                </div>
+                <div class="footer-creditos">
+                    <p>Diseñado por <strong>W4U</strong></p>
+                    <a href="../Landing/landing_page.html" target="_blank">
+                        <img src="../img/logo-w4u.png" alt="Logo W4U" class="logo-creador" />
+                    </a>
+                </div>
             </div>
-            <div class="footer-creditos">
-            <p>Diseñado por <strong>W4U</strong></p>
-            <a href="../Landing/landing_page.html" target="_blank">
-                <img src="../img/logo-w4u.png" alt="Logo W4U" class="logo-creador" />
-            </a>
-            </div>
-        </div>
         </footer>
 
     </div>
