--- a/Emprendimientos/Ofertas.html
+++ b/Emprendimientos/Ofertas.html
@@ -22,91 +22,83 @@
 </head>
 
 <body>
-<header class="header montserrat-semibold">
+    <header class="header montserrat-semibold">
         <nav class="nav container">
-        <div class="nav__data">
-            <a href="#" class="nav__logo">
-                Comunidad Flores de Heredia 
-            </a>
-            
-            <div class="nav__toggle" id="nav-toggle">
-                <i class="fa-solid fa-bars nav__burger"></i>
-                <i class="fa-solid fa-xmark  nav__close"></i>
+            <div class="nav__data">
+                <a href="#" class="nav__logo">
+                    Comunidad Flores de Heredia
+                </a>
+
+                <div class="nav__toggle" id="nav-toggle">
+                    <i class="fa-solid fa-bars nav__burger"></i>
+                    <i class="fa-solid fa-xmark  nav__close"></i>
+                </div>
             </div>
-        </div>
 
-        <div class="nav__menu" id="nav-menu">
-            <ul class="nav__list">
-                <li><a href="../Inicio/inicio.html" class="nav__link">Inicio</a></li>
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list">
+                    <li><a href="../Inicio/inicio.html" class="nav__link">Inicio</a></li>
 
-                <li class="dropdown__item">
-                    <div class="nav__link">
-                    Comunidad <i class="ri-arrow-down-s-line dropdown__arrow"></i>
-                    </div>
+                    <li class="dropdown__item">
+                        <div class="nav__link">
+                            Comunidad <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+                        </div>
 
-                    <ul class="dropdown__menu">
-                    <li>
-                        <a href="../Anuncios/anuncios.html" class="dropdown__link">
-                            <i class="ri-pie-chart-line"></i> Anuncios comunitarios
+                        <ul class="dropdown__menu">
+                            <li>
+                                <a href="../Anuncios/anuncios.html" class="dropdown__link">
+                                    <i class="ri-pie-chart-line"></i> Anuncios comunitarios
 
-                        </a>                          
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="../Transporte/transporte.html" class="dropdown__link">
+                                    <i class="ri-arrow-up-down-line"></i> Transporte público
+
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="../Reportes/reportes.html" class="dropdown__link">
+                                    <i class="ri-arrow-up-down-line"></i> Reportes quejas
+
+                                </a>
+                            </li>
+                            <li>
+                                <a href="../Mapa/mapa.html" class="dropdown__link">
+                                    <i class="ri-arrow-up-down-line"></i>Mapa
+
+                                </a>
+                            </li>
+                        </ul>
                     </li>
 
-                    <li>
-                        <a href="../Transporte/transporte.html" class="dropdown__link">
-                            <i class="ri-arrow-up-down-line"></i> Transporte público
+                    <li><a href="../Eventos/eventos.html" class="nav__link">Eventos</a></li>
 
-                        </a>
+                    <li class="dropdown__item">
+                        <div class="nav__link">
+                            Emprendimientos <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+                        </div>
+
+                        <ul class="dropdown__menu">
+                            <li>
+                                <a href="../Emprendimientos/Ofertas.html" class="dropdown__link">
+                                    <i class="ri-user-line"></i> Ofertas y descuentos
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="../Emprendimientos/Emprendimientos.html" class="dropdown__link">
+                                    <i class="ri-lock-line"></i> Negocios
+                                </a>
+                            </li>
                     </li>
 
-                    <li>
-                        <a href="../Reportes/reportes.html" class="dropdown__link">
-                            <i class="ri-arrow-up-down-line"></i> Reportes quejas
-
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../Mapa/mapa.html" class="dropdown__link">
-                            <i class="ri-arrow-up-down-line"></i>Mapa
-
-                        </a>
-                    </li>
-                    </ul>
-                </li>
-                
-                <li><a href="../Eventos/eventos.html" class="nav__link">Eventos</a></li>
-
-                <li class="dropdown__item">
-                    <div class="nav__link">
-                    Emprendimientos <i class="ri-arrow-down-s-line dropdown__arrow"></i>
-                    </div>
-
-                    <ul class="dropdown__menu">
-                    <li>
-                        <a href="../Emprendimientos/Ofertas.html" class="dropdown__link">
-                            <i class="ri-user-line"></i> Ofertas y descuentos
-                        </a>                          
-                    </li>
-
-                    <li>
-                        <a href="../Emprendimientos/Emprendimientos.html" class="dropdown__link">
-                            <i class="ri-lock-line"></i> Negocios
-                        </a>
-                    </li>
-                </li>
-
-            </ul>
-        </div>
+                </ul>
+            </div>
         </nav>
     </header>
-    <div class="head_content">
-
-        <img src="imagenes login/W4U LOGO.jpeg" alt="Logo W4U" class="logo" />
-        <div class="community_name">Nombre comunidad</div>
-
-        <!--<input type="text" placeholder="Buscar" class="search_input"> -->
-
-    </div>
 
     <div class="filter">
         <div class="mini-nav">
@@ -175,8 +167,7 @@
                 <h3 class="offer-tittle">Corte de Cabello a ₡2,500
                 </h3>
                 <img src="barbero.jpg" alt="" class="offer-image">
-                <p class="offer-description">Barbería Don Luis en San Ramón ofrece cortes económicos para estudiantes de
-                    lunes a jueves.
+                <p class="offer-description">Barbería Don Luis en San Ramón ofrece cortes económicos para estudiantes.
 
                 </p>
                 <button class="view-offer">Ver Oferta</button>
@@ -243,6 +234,7 @@
     </script>
 
 </body>
-  <script src="../menu/menu.js"></script>
-  <script src="https://kit.fontawesome.com/2b7365d647.js" crossorigin="anonymous"></script>   
+<script src="../menu/menu.js"></script>
+<script src="https://kit.fontawesome.com/2b7365d647.js" crossorigin="anonymous"></script>
+
 </html>
