--- a/Emprendimientos/Emprendimientos.html
+++ b/Emprendimientos/Emprendimientos.html
@@ -138,7 +138,7 @@
             </div>
             <div class="carrusel">
                 <div class="imagenes">
-                    <img src="OIP.jpeg" alt="" class="imagen">
+                    <img src="OIP.jpg" alt="" class="imagen">
                     <img src="OIP (1).jpeg" alt="">
                     <img src="OIP (3).jpg" alt="">
                 </div>
@@ -147,7 +147,7 @@
             </div>
             <div class="products">
                 <h3 class="products_title">Productos</h3>
-                <img src="golden-retriever.jpg" alt="" class="product_img">
+                <img src="OIP (3).jpg" alt="" class="product_img">
                 <button class="view-products">Ver productos</button>
             </div>
             <!--<div class="business-contact">
@@ -166,16 +166,16 @@
             </div>
             <div class="carrusel">
                 <div class="imagenes">
-                    <img src="perro5.jpg" alt="" class="imagen">
-                    <img src="golden-retriever.jpg" alt="">
-                    <img src="perro4.jpg" alt="">
+                    <img src="Manosdebarro1.png" alt="" class="imagen">
+                    <img src="Manosdebarro2.jpg" alt="">
+                    <img src="Manosdebarro3.jpg" alt="">
                 </div>
                 <button class="anterior"><i class='bx  bx-arrow-left-stroke'></i></button>
                 <button class="siguiente"><i class='bx  bx-arrow-right'></i></button>
             </div>
             <div class="products">
                 <h3 class="products_title">Productos</h3>
-                <img src="golden-retriever.jpg" alt="" class="product_img">
+                <img src="Manosdebarro3.jpg" alt="" class="product_img">
                 <button class="view-products">Ver productos</button>
             </div>
             <!--<div class="business-contact">
@@ -194,16 +194,16 @@
             </div>
             <div class="carrusel">
                 <div class="imagenes">
-                    <img src="perro5.jpg" alt="" class="imagen">
-                    <img src="golden-retriever.jpg" alt="">
-                    <img src="perro4.jpg" alt="">
+                    <img src="aromedehogar1.jpg" alt="" class="imagen">
+                    <img src="aromadehogar2.jpg" alt="">
+                    <img src="aromadehogar3.jpg" alt="">
                 </div>
                 <button class="anterior"><i class='bx  bx-arrow-left-stroke'></i></button>
                 <button class="siguiente"><i class='bx  bx-arrow-right'></i></button>
             </div>
             <div class="products">
                 <h3 class="products_title">Productos</h3>
-                <img src="golden-retriever.jpg" alt="" class="product_img">
+                <img src="aromedehogar1.jpg" alt="" class="product_img">
                 <button class="view-products">Ver productos</button>
             </div>
             <!--<div class="business-contact">
@@ -242,7 +242,7 @@
             let indice = 0;
             // Función para actualizar el carrusel
             function actualizarCarrusel() {
-                imagenes.style.transform = `translateX(-${indice * 300}px)`;
+                imagenes.style.transform = `translateX(-${indice * 400}px)`;
             }
             // Botón siguiente
             siguiente.addEventListener('click', () => {
