Ajustes en reportes y en admin

--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -24,6 +24,7 @@
         <li><a href="#quejas">Quejas</a></li>
         <li><a href="#ofertas">Ofertas</a></li>
         <li><a href="#usuarios">Usuarios</a></li>
+        <li><a href="../Inicio/inicio.html">Volver a Inicio</a></li>
       </ul>
     </aside>
 
