--- a/Inicio/inicio.html
+++ b/Inicio/inicio.html
@@ -11,7 +11,7 @@
  <header class="header montserrat-semibold">
         <nav class="nav container">
         <div class="nav__data">
-            <a href="#" class="nav__logo">
+            <a href="../Admin/admin.html" class="nav__logo">
                 Comunidad Flores de Heredia 
             </a>
             
