--- a/Login/login.html
+++ b/Login/login.html
@@ -26,6 +26,7 @@
     </form>
 
     <p class="registro-link">¿No tienes cuenta? <a href="../Registro/Registro.html">Crea una</a></p>
+    <p class="registro-link">Volver a inicio <a href="../Inicio/inicio.html">Haz clic aquí</a></p>
   </div>
 
   <!-- Footer -->
