--- a/Reportes/reportes.html
+++ b/Reportes/reportes.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Reportes y Quejas</title>
     <link rel="stylesheet" href="../menu/menu.css">
-    <script src="../menu/menu.js"></script>
+    <script defer src="../menu/menu.js"></script>
   <script src="https://kit.fontawesome.com/2b7365d647.js" crossorigin="anonymous"></script>   
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="reportes.css" />
