--- a/Emprendimientos/Emprendimientos.html
+++ b/Emprendimientos/Emprendimientos.html
@@ -154,6 +154,7 @@
                     frescos y naturales.</p>
                 <button class="visualize" data-id="1">Visualizar</button>
             </div>
+            <div class="second">
             <div class="carrusel">
                 <div class="imagenes">
                     <img src="OIP.jpeg" alt="" class="imagen">
@@ -168,6 +169,8 @@
                 <img src="golden-retriever.jpg" alt="" class="product_img">
                 <button class="view-products">Ver productos</button>
             </div>
+            </div>
+
             <!--<div class="business-contact">
                 <h3>Contacto</h3>
             </div>-->
@@ -182,6 +185,7 @@
                 </p>
                 <button class="visualize" data-id="2">Visualizar</button>
             </div>
+            <div class="second">
             <div class="carrusel">
                 <div class="imagenes">
                     <img src="perro5.jpg" alt="" class="imagen">
@@ -196,6 +200,8 @@
                 <img src="golden-retriever.jpg" alt="" class="product_img">
                 <button class="view-products">Ver productos</button>
             </div>
+            </div>
+           
             <!--<div class="business-contact">
                 <h3>Contacto</h3>
             </div>-->
@@ -210,7 +216,8 @@
                     cualquier espacio en un rincón acogedor. </p>
                 <button class="visualize" data-id="3">Visualizar</button>
             </div>
-            <div class="carrusel">
+            <div class="second">
+<div class="carrusel">
                 <div class="imagenes">
                     <img src="perro5.jpg" alt="" class="imagen">
                     <img src="golden-retriever.jpg" alt="">
@@ -224,6 +231,8 @@
                 <img src="golden-retriever.jpg" alt="" class="product_img">
                 <button class="view-products">Ver productos</button>
             </div>
+            </div>
+            
             <!--<div class="business-contact">
                 <h3>Contacto</h3>
             </div>-->
