--- a/Eventos/eventos.html
+++ b/Eventos/eventos.html
@@ -106,11 +106,11 @@
             <i class="fa-solid fa-heart fa-2x corazon con_like"></i>
             <br>
             <div class="carta2"  onclick="abrirFormulario()"  >
-            <h3 class="montserrat-bold nombre">Nombre del evento</h3>
-            <p class="montserrat-regular parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus culpa nostrum velit enim incidunt iusto, unde quos</p>
+            <h3 class="montserrat-bold nombre">Evento familiar</h3>
+            <p class="montserrat-regular parrafo">Traigan a sus familias a disfrutar de la celebración de su día</p>
             <div class="fecha_lugar">
-                <button class="escribir"><i class="fa-solid fa-location-dot fa-2x"></i><p class="montserrat-semibold">Lugar</p></button>
-                <p class="montserrat-regular fecha">Fecha</p>
+                <button class="escribir"><i class="fa-solid fa-location-dot fa-2x"></i><p class="montserrat-semibold">Parque Central</p></button>
+                <p class="montserrat-regular fecha">10/07/2025</p>
             </div>
             </div>
         </div>
@@ -121,10 +121,10 @@
             <br>
             <div class="carta2"  onclick="abrirFormulario()"  >
             <h3 class="montserrat-bold nombre">Feria</h3>
-            <p class="montserrat-regular parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus culpa nostrum velit enim incidunt iusto, unde quos</p>
+            <p class="montserrat-regular parrafo">Feria para recaudar fondos para las escuelas del distrito</p>
             <div class="fecha_lugar">
-                <button class="escribir"><i class="fa-solid fa-location-dot fa-2x"></i><p class="montserrat-semibold lugar1">Lugar</p></button>
-                <p class="montserrat-regular fecha">Fecha</p>
+                <button class="escribir"><i class="fa-solid fa-location-dot fa-2x"></i><p class="montserrat-semibold lugar1">Parque Central</p></button>
+                <p class="montserrat-regular fecha">12/08/2025</p>
             </div>
             </div>
         </div>
