--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -448,8 +448,9 @@
             </tbody>
           </table>
         </div>
-      </section>
+      
       <div id="modal-detalles" class="modal">
+
         <div class="modal-content">
           <span class="close-button" data-close-button>&times;</span>
           <h2>Detalles</h2>
@@ -459,6 +460,7 @@
           <p><strong>Descripción:</strong> Panaderia de pan de masa madre y reposteria</p>
           <p><strong>Ubicacion: </strong> Frente al Colegio San Joaquin</p>
             <p><strong>Adjunto:</strong></p>
+            <div class="button-group modal-actions"></div>
             <button class="detalles" id="show-image" style="margin-top: 1rem;">Ver imagen</button>
             <img id="modal-image" src="img/image-emprendimiento.jpg" alt="Archivo adjunto" style="max-width:100%; height:auto; display:none; margin-top:10px;">
         </div>
